fix: update version labels in demo HTML for clarity

--- a/packages/demo/index.html
+++ b/packages/demo/index.html
@@ -19,7 +19,7 @@
         ></code
       >
     </h1>
-    <div>Runtime Version: <span id="version">Loading...</span></div>
-    <div>File Version: <span id="file-version">Loading...</span></div>
+    <div>Virtual Module Version: <span id="version">Loading...</span></div>
+    <div>Static File Version: <span id="file-version">Loading...</span></div>
   </body>
 </html>
